@@ -1,14 +1,21 @@
 
 package acme.features.customer.booking;
 
+import java.util.Collection;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 
+import acme.client.components.datatypes.Money;
 import acme.client.components.models.Dataset;
 import acme.client.components.views.SelectChoices;
 import acme.client.services.AbstractGuiService;
 import acme.client.services.GuiService;
+import acme.entities.S1.Flight;
+import acme.entities.S1.Leg;
 import acme.entities.S2.Booking;
 import acme.entities.S2.ClassType;
+import acme.features.customer.bookingPassenger.CustomerBookingPassengerRepository;
 import acme.realms.Customer;
 
 @GuiService
@@ -17,7 +24,10 @@ public class CustomerBookingPublishService extends AbstractGuiService<Customer, 
 	// Internal state ---------------------------------------------------------
 
 	@Autowired
-	private CustomerBookingRepository repository;
+	private CustomerBookingRepository			repository;
+
+	@Autowired
+	private CustomerBookingPassengerRepository	repositoryBP;
 
 	// AbstractGuiService interface -------------------------------------------
 
@@ -46,8 +56,18 @@ public class CustomerBookingPublishService extends AbstractGuiService<Customer, 
 
 	@Override
 	public void validate(final Booking booking) {
-		if (booking.getLastCreditCardNibble() == null || booking.getLastCreditCardNibble().isBlank())
-			super.state(false, "lastCreditCardNibble", "acme.validation.booking.credit-card-required");
+		if (!super.getBuffer().getErrors().hasErrors("lastCreditCardNibble"))
+			// Comprobar que no esté vacío o null
+			if (booking.getLastCreditCardNibble() == null || booking.getLastCreditCardNibble().trim().isEmpty())
+				super.state(false, "lastCreditCardNibble", "customer.booking.error.lastCreditCardNibble.required");
+		int bookingId = booking.getId();
+		int publishedPassengers = this.repository.countPublishedByBookingId(bookingId);
+		int draftPassengers = this.repository.countDraftByBookingId(bookingId);
+
+		if (publishedPassengers == 0)
+			super.state(false, "passengers", "customer.booking.error.passengers.required");
+		if (draftPassengers > 0)
+			super.state(false, "passengers", "customer.booking.error.passengers.draftNotAllowed");
 	}
 
 	@Override
@@ -58,11 +78,42 @@ public class CustomerBookingPublishService extends AbstractGuiService<Customer, 
 
 	@Override
 	public void unbind(final Booking booking) {
+		Collection<Flight> flights = this.repository.findAllFlights(); // O el método que corresponda
+		SelectChoices flightChoices = new SelectChoices();
+
+		for (Flight flight : flights) {
+			List<Leg> legs = this.repository.findByFlightIdOrdered(flight.getId());
+			if (!legs.isEmpty()) {
+				Leg firstLeg = legs.get(0);
+				Leg lastLeg = legs.get(legs.size() - 1);
+
+				String origin = firstLeg.getDepartureAirport().getIataCode();
+				String destination = lastLeg.getArrivalAirport().getIataCode();
+				String departure = firstLeg.getScheduledDeparture().toString();
+				String arrival = lastLeg.getScheduledArrival().toString();
+
+				String label = origin + " – " + destination + " (" + departure + " – " + arrival + ")";
+				boolean selected = booking.getFlight() != null && booking.getFlight().getId() == flight.getId();
+				flightChoices.add(String.valueOf(flight.getId()), label, selected);
+			}
+		}
+
 		Dataset dataset;
+
 		dataset = super.unbindObject(booking, "locatorCode", "purchaseMoment", "travelClass", "lastCreditCardNibble", "draftMode", "flight");
+		dataset.put("flights", flightChoices);
+
+		Money costPerPassenger = booking.getFlight().getCost();
+		int passengerCount = this.repositoryBP.findPublishedByBookingId(booking.getId()).size();
+
+		Money totalPrice = new Money();
+		totalPrice.setAmount(costPerPassenger.getAmount() * passengerCount);
+		totalPrice.setCurrency(costPerPassenger.getCurrency());
 
 		SelectChoices travelClassChoices = SelectChoices.from(ClassType.class, booking.getTravelClass());
 		dataset.put("travelClass", travelClassChoices);
+		dataset.put("id", booking.getId());
+		dataset.put("price", totalPrice);
 		super.getResponse().addData(dataset);
 	}
 }
